<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">imformation confirm</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">please enter your students ID</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This  Student ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_reg_in">第一次登录？注册您的帐号</string>
    <string name="action_log_in">登录</string>
    <string name="title_activity_settings">System</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_imformation">Personal Imformation</string>
    <string name="pref_header_general">Personal Imformation</string>
    <string name="pref_header_score">Score System</string>

    <string name="pref_title_social_recommendations">Enable Real-Name Switch</string>
    <string name="pref_description_social_recommendations">If you turn on this switch ,everything that you uploaded or you commented will attach with your real name,and your personnal imformation will be public.
    </string>

    <string name="pref_title_display_name">你的姓名</string>
    <string name="pref_default_display_name">你的姓名</string>
    <string name="pref_title_display_major">你的专业</string>
    <string name="pref_default_display_major">你的专业</string>
    <string name="pref_title_display_gender">你的性别</string>
    <string name="pref_default_display_age">你的年龄</string>
    <string name="pref_title_display_age">你的年龄</string>
    <string name="pref_title_display_entranceDate">Your Entrance Date</string>
    <string name="pref_title_display_studentScore">Earned Score</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Settings</string>

    <string name="pref_title_score_rewards">Rewards</string>
    <string-array name="pref_score_reward">
        <item>15 for reward1</item>
        <item>30 for reward2</item>
        <item>50 for reward3</item>
        <item>80 for reward4</item>
        <item>100 for reward5</item>
        <item>no reward below 15</item>
    </string-array>

    <string-array name="pref_score_reward_values">
        <item>15</item>
        <item>30</item>
        <item>50</item>
        <item>80</item>
        <item>100</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Score Reward</string>
    <string name="pref_title_new_message_notifications">privacy switch</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_learning">LearningActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_envir">EnvirActivity</string>
    <string name="title_activity_act">ActActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
