<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.tyut.feiyu.myapplication.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.tyut.feiyu.myapplication.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.tyut.feiyu.myapplication.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@android:drawable/alert_dark_frame"
        android:title="@string/pref_header_data_sync" />
</preference-headers>
