<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/pref_header_score"
        android:key="Student_score">
        <EditTextPreference
            android:defaultValue="0"
            android:key="static_score"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_studentScore"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_score_reward"
            android:entryValues="@array/pref_score_reward_values"
            android:key="score_reward"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_score_rewards" />
    </PreferenceCategory>

</PreferenceScreen>
